# openz64

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/platform/: base.cmake  linux.cmake  windows.cmake
game/include/: fp.h  functions.h  global.h  macros.h  z64.h  z64animation.h  z64audio.h  z64camera.h  z64cutscene.h  z64dma.h  z64effect.h  z64elf_message.h  z64light.h  z64map_mark.h  z64math.h  z64save.h  z64transition.h
game/include/libc/: math.h  stdlib.h
game/soh/: SaveManager.h  SohMenuBar.h
game/soh/Enhancements/: bootcommands.h  gameconsole.h  gameplaystatswindow.h
game/soh/Enhancements/audio/: AudioEditor.h
game/soh/Enhancements/controls/: GameControlEditor.h
game/soh/Enhancements/cosmetics/: CosmeticsEditor.h
game/soh/Enhancements/debugger/: actorViewer.h  colViewer.h  debugSaveEditor.h  dlViewer.h
game/soh/Enhancements/randomizer/: randomizer.h  randomizer_check_tracker.h  randomizer_entrance_tracker.h  randomizer_item_tracker.h  randomizer_settings_window.h  randomizer_tricks.h
game/soh/config/: ConfigUpdaters.h
game/soh/resource/type/: Animation.h  AudioSample.h  AudioSequence.h  AudioSoundFont.h  CollisionHeader.h  Path.h  Scene.h  SkeletonLimb.h  Text.h
game/soh/resource/type/scenecommand/: EndMarker.h  SceneCommand.h  SetActorList.h  SetAlternateHeaders.h  SetCameraSettings.h  SetCollisionHeader.h  SetCsCamera.h  SetCutscenes.h  SetEchoSettings.h  SetEntranceList.h  SetExitList.h  SetLightList.h  SetLightingSettings.h  SetMesh.h  SetObjectList.h  SetPathways.h  SetRoomBehavior.h  SetRoomList.h  SetSkyboxModifier.h  SetSkyboxSettings.h  SetSoundSettings.h  SetSpecialObjects.h  SetStartPositionList.h  SetTimeSettings.h  SetTransitionActorList.h  SetWindSettings.h
game/src/boot/: build.c.in
game/src/code/: audio_effects.c  audio_heap.c  audio_load.c  audio_playback.c  audio_seqplayer.c  audio_sound_params.c  audio_synthesis.c  code_80097A00.c  code_800EC960.c  code_800F7260.c  code_800F9280.c  db_camera.c  game.c  main.c  z_actor.c  z_camera.c  z_camera_data.inc  z_construct.c  z_debug_display.c  z_demo.c  z_draw.c  z_eff_blure.c  z_eff_shield_particle.c  z_eff_spark.c  z_en_a_keep.c  z_en_item00.c  z_fbdemo_circle.c  z_fbdemo_triforce.c  z_fbdemo_wipe1.c  z_kanfont.c  z_kankyo.c  z_lifemeter.c  z_lights.c  z_map_exp.c  z_map_mark.c  z_message_PAL.c  z_parameter.c  z_play.c  z_player_lib.c  z_scene_table.c
game/src/libultra/gu/: sins.c  sintable.c
game/src/overlays/actors/ovl_Arms_Hook/: z_arms_hook.c  z_arms_hook.h
game/src/overlays/actors/ovl_Arrow_Fire/: z_arrow_fire.c  z_arrow_fire.h
game/src/overlays/actors/ovl_Arrow_Ice/: z_arrow_ice.c  z_arrow_ice.h
game/src/overlays/actors/ovl_Arrow_Light/: z_arrow_light.c  z_arrow_light.h
game/src/overlays/actors/ovl_Bg_Bdan_Objects/: z_bg_bdan_objects.c  z_bg_bdan_objects.h
game/src/overlays/actors/ovl_Bg_Bdan_Switch/: z_bg_bdan_switch.c  z_bg_bdan_switch.h
game/src/overlays/actors/ovl_Bg_Bom_Guard/: z_bg_bom_guard.c  z_bg_bom_guard.h
game/src/overlays/actors/ovl_Bg_Bombwall/: z_bg_bombwall.c  z_bg_bombwall.h
game/src/overlays/actors/ovl_Bg_Bowl_Wall/: z_bg_bowl_wall.c  z_bg_bowl_wall.h
game/src/overlays/actors/ovl_Bg_Breakwall/: z_bg_breakwall.c  z_bg_breakwall.h
game/src/overlays/actors/ovl_Bg_Ddan_Jd/: z_bg_ddan_jd.c  z_bg_ddan_jd.h
game/src/overlays/actors/ovl_Bg_Ddan_Kd/: z_bg_ddan_kd.c  z_bg_ddan_kd.h
game/src/overlays/actors/ovl_Bg_Dodoago/: z_bg_dodoago.c  z_bg_dodoago.h
game/src/overlays/actors/ovl_Bg_Dy_Yoseizo/: z_bg_dy_yoseizo.c  z_bg_dy_yoseizo.h
game/src/soh/: ActorDB.cpp  CrashHandlerExp.h  OTRGlobals.cpp  SaveManager.cpp  SaveManager.h  SohGui.cpp  SohMenuBar.cpp  SohMenuBar.h  UIWidgets.cpp  UIWidgets.hpp  frame_interpolation.cpp  frame_interpolation.h  stubs.c  z_message_OTR.cpp  z_play_otr.cpp  z_scene_otr.cpp
game/src/soh/Enhancements/: bootcommands.c  bootcommands.h  debugconsole.cpp  enemyrandomizer.h  gameconsole.c  gameconsole.h  gameplaystats.cpp  gameplaystatswindow.h  mods.cpp  nametag.cpp  presets.cpp  savestates.cpp
game/src/soh/Extractor/: Extract.cpp
game/src/soh/config/: ConfigUpdaters.h
libraries/: CMakeLists.txt
libraries/StormLib/src/: StormPort.h
libraries/ZAPDUtils/: CMakeLists.txt
libultra/include/: libultraship.h
libultra/include/controller/: Controller.h
libultra/include/libultra/: bridge.h
libultra/include/libultra/bridge/: consolevariablebridge.h  resourcebridge.h
libultra/include/resource/: Archive.h  Resource.h  ResourceLoader.h  ResourceManager.h
libultra/include/resource/type/: DisplayList.h  Texture.h
libultra/include/window/gui/: ConsoleWindow.h  Gui.h
libultra/src/audio/: Audio.cpp  AudioPlayer.cpp  PulseAudioPlayer.cpp  SDLAudioPlayer.cpp  WasapiAudioPlayer.cpp
libultra/src/config/: Config.cpp  ConsoleVariable.cpp  ConsoleVariable.h
libultra/src/controller/: ControlDeck.cpp  Controller.cpp  DummyController.cpp  KeyboardScancodes.h  SDLController.cpp
libultra/src/debug/: Console.cpp  Console.h  CrashHandler.cpp
libultra/src/graphic/Fast3D/: gfx_cc.cpp  gfx_direct3d11.cpp  gfx_dxgi.cpp  gfx_gx2.cpp  gfx_metal.cpp  gfx_opengl.cpp  gfx_pc.cpp  gfx_pc.h  gfx_sdl2.cpp
libultra/src/log/: luslog.cpp
libultra/src/port/switch/: SwitchImpl.cpp
libultra/src/public/bridge/: audiobridge.cpp  consolevariablebridge.cpp  controllerbridge.cpp  crashhandlerbridge.cpp  resourcebridge.cpp  windowbridge.cpp
libultra/src/public/libultra/: os.cpp
libultra/src/resource/: Archive.cpp  Resource.cpp  ResourceFactory.cpp  ResourceLoader.cpp  ResourceManager.cpp
libultra/src/resource/type/: Array.cpp  Blob.cpp  Matrix.h  Vertex.h
libultra/src/utils/: Utils.cpp  stox.cpp
libultra/src/utils/binarytools/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  MemoryStream.cpp  Stream.cpp
libultra/src/window/: Window.cpp
libultra/src/window/gui/: ConsoleWindow.cpp  GameOverlay.cpp  Gui.cpp  GuiElement.cpp  GuiWindow.cpp  GuiWindow.h  InputEditorWindow.cpp  InputEditorWindow.h  InputViewer.cpp  StatsWindow.cpp
tools/: build-emscripten.sh  compose.yml
(+974 files in other folders)
